Fix galleries#edit spacing issues

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -63,7 +63,7 @@ button, .button {
 .width-15 { width: 15px !important; }
 .width-70 { width: 70px; }
 .width-150 { width: 150px; }
-.spacer, .spacer-alt { height: 2px; padding: 0; }
+.spacer, .spacer-alt { height: 12px; padding: 0; }
 .spacer-alt { background-color: $bg_color_spacer_alt; }
 .centered { text-align: center !important; }
 .left-align { text-align: left; }
